--- a/Groovy/RestaurantReservationSystem/build.gradle
+++ b/Groovy/RestaurantReservationSystem/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     console "org.grails:grails-console"
     profile "org.grails.profiles:web"
     runtime "com.bertramlabs.plugins:asset-pipeline-grails:2.8.2"
-    runtime "com.h2database:h2"
+    runtime "org.postgresql:postgresql:9.4.1211.jre7"
     testCompile "org.grails:grails-plugin-testing"
     testCompile "org.grails.plugins:geb"
     testRuntime "org.seleniumhq.selenium:selenium-htmlunit-driver:2.47.1"
