--- a/Groovy/RestaurantReservationSystem/grails-app/conf/application.yml
+++ b/Groovy/RestaurantReservationSystem/grails-app/conf/application.yml
@@ -9,15 +9,16 @@ hibernate:
 dataSource:
     pooled: true
     jmxExport: true
-    driverClassName: org.h2.Driver
-    username: sa
+    driverClassName: org.postgresql.Driver
+    username: postgres
     password:
 
 environments:
     development:
         dataSource:
             dbCreate: create-drop
-            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            url: jdbc:postgresql://127.0.0.1:5432/reservations
+            username: postgres
     test:
         dataSource:
             dbCreate: update
