--- a/JAVA/PTOiSH/Tasks/build.gradle
+++ b/JAVA/PTOiSH/Tasks/build.gradle
@@ -11,3 +11,16 @@ task exercise4a(type: JavaExec) {
     main = 'pl.dmcs.ptoish.exercise4.Exercise4a'
     classpath = sourceSets.main.runtimeClasspath
 }
+
+// gradle exercise4b -Ptype=soft
+// gradle exercise4b -Ptype=weak
+// gradle exercise4b -Ptype=phantom
+task exercise4b(type: JavaExec) {
+    if (project.hasProperty('type')){
+        args(type)
+    }
+
+    maxHeapSize = "2m"
+    main = 'pl.dmcs.ptoish.exercise4.Exercise4b'
+    classpath = sourceSets.main.runtimeClasspath
+}
