--- a/JAVA/PTOiSH/Tasks/build.gradle
+++ b/JAVA/PTOiSH/Tasks/build.gradle
@@ -6,6 +6,11 @@ repositories() {
     jcenter()
 }
 
+task exercise1a(type: JavaExec) {
+    main = 'pl.dmcs.ptoish.exercise1.Exercise1a'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
 task exercise3b(type: JavaExec) {
     main = 'pl.dmcs.ptoish.exercise3.Exercise3b'
     classpath = sourceSets.main.runtimeClasspath
